--- a/trabajoenesto.html
+++ b/trabajoenesto.html
@@ -25,35 +25,12 @@
         </header>
         <main>
             <section id="banner">
-                <img src="banner.jpg">
+                <img src="construccion.png>
                 <div class="contenedor">
-                    <h2>Yoga de Laura</h2>
-                        <p>Los beneficios de practicar yoga</p>
-                    <a href="Leermas.html">Leer más</a>
+                    <h2>Estamos trabajando en esto</h2>
+                    <h2>Disculpe las molestias</h2>
                 </div>
-            </section>
-            <section id="bienvenidos">
-                <h2>BIENVENIDOS A YOGA DE LAURA</h2>
-                <p>En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
-            </section>
-
-            <section id="blog">
-                <h3>Ultimas novedades</h3>
-                <div class="contenedor">
-                    <article>
-                        <img src="clase.jpg">
-                        <h4>Las clases de yoga</h4>
-                    </article>
-                    <article>
-                        <img src="clase2.jpg">
-                        <h4>Yoga en tu casa</h4>
-                    </article>
-                    <article>
-                        <img src="claseaire.jpg">
-                        <h4>Yoga al aire libre</h4>
-                    </article>
-                </div>
-            </section>
+            </section>            
         </main>
     <footer>
         <div class="contenedor">
