--- a/Contacto.html
+++ b/Contacto.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    
-    <link rel="icon" href="posturaicono.ico" sizes="20x20" type="image/ico">
+    <script src="script.js"></script>
+    <link rel="icon" href="logo.png" sizes="20x20" type="image/png">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/fontello.css">
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="contenedor">
-            <h1 class="icon-cuervo">Yoga de Laura</h1>
+            <h1 class="icon-logo"> Yoga de Laura</h1>
             <input type="checkbox" id="menu-bar"></input>
             <label class="icon-menu" for="menu-bar"></label>
             <nav class="menu">
@@ -40,6 +40,18 @@
 
            </form>
        </div>
-   </main>
+   </main><br><br><br>
+   <footer>
+    <div class="contenedor">
+        <p class="copy">Yoga de Laura &copy; 2020</p>
+        <div class="redes">
+            <a class="icon-instagram" href="https://www.instagram.com/laura_petracca"></a>
+                <a class="icon-youtube" href="trabajoenesto.html"></a>
+                <a class="icon-whatsapp" href="https://wa.me/5493415964270"></a>
+                <a class="icon-mail" href="trabajoenesto.html"></a>
+          
+        </div>
+    </div>
+</footer>
 </body>
 </html>
