--- a/trabajoenesto.html
+++ b/trabajoenesto.html
@@ -25,10 +25,10 @@
         </header>
         <main>
             <section id="banner">
-                <img src="construccion.png>
+                <img src="logo.png">
                 <div class="contenedor">
-                    <h2>Estamos trabajando en esto</h2>
-                    <h2>Disculpe las molestias</h2>
+                    <h2 style="text-align: center;">Estamos trabajando en esto<br>Disculpe las molestias</h2>
+                
                 </div>
             </section>            
         </main>
@@ -36,9 +36,9 @@
         <div class="contenedor">
             <p class="copy">Yoga de Laura &copy; 2020</p>
             <div class="redes">
-                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca"></a>
+                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
                 <a class="icon-youtube" href="trabajoenesto.html"></a>
-                <a class="icon-whatsapp" href="https://wa.me/5493415964270"></a>
+                <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
                 <a class="icon-mail" href="trabajoenesto.html"></a>
               
             </div>
