--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                 </div>
             </section>
             <section id="bienvenidos">
-                <h2>BIENVENIDOS A YOGA DE LAURA</h2>
-                <p>En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
+                <div class="contenedor">
+                    <h2>BIENVENIDOS A YOGA DE LAURA</h2>
+                    <p>En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
+                </div>
             </section>
-
             <section id="blog">
                 <h3>Ultimas novedades</h3>
                 <div class="contenedor">
@@ -59,9 +60,9 @@
         <div class="contenedor">
             <p class="copy">Yoga de Laura &copy; 2020</p>
             <div class="redes">
-                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca"></a>
+                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
                 <a class="icon-youtube" href="trabajoenesto.html"></a>
-                <a class="icon-whatsapp" href="https://wa.me/5493415964270"></a>
+                <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
                 <a class="icon-mail" href="trabajoenesto.html"></a>
               
             </div>
