--- a/Leermas.html
+++ b/Leermas.html
@@ -27,9 +27,9 @@
         <section id="banner">
             <img src="banner.jpg">
             <div class="contenedor">
-                <h2>Yoga de Laura</h2>
-                    <p>Los beneficios de practicar yoga</p>
-                   
+                <h2>¡Bienvenidos!</h2>
+                    <p>A la web de la profe Laura</p><br><br><br>
+                <!-- <a href="Leermas.html">Leer más</a> -->
             </div>
         </section>
         <section id="bienvenidos">
@@ -107,7 +107,7 @@
         <div class="contenedor">
             <p class="copy">Yoga de Laura &copy; 2020</p>
             <div class="redes">
-                <<a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
+                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
                 <a class="icon-youtube" href="trabajoenesto.html"></a>
                 <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
                 <a class="icon-mail" href="trabajoenesto.html"></a>
