--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
             <section id="banner">
                 <img src="banner.jpg">
                 <div class="contenedor">
-                    <h2>Yoga de Laura</h2>
-                        <p>Los beneficios de practicar yoga</p>
+                    <h2>¡Bienvenidos!</h2>
+                        <p>A la web de la profe Laura</p>
                     <a href="Leermas.html">Leer más</a>
                 </div>
-            </section>
+            </section> 
             <section id="bienvenidos">
                 <div class="contenedor">
-                    <h2>BIENVENIDOS A YOGA DE LAURA</h2>
                     <p>En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
                 </div>
             </section>
