cambios canal YT

--- a/Videos.html
+++ b/Videos.html
@@ -24,16 +24,21 @@
             </div>
         </header>
         <main>
-            <div class="contenedor">         
-                <iframe width="702" height="395" src="https://www.youtube.com/embed/6J9eQ9Aqudo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="contenedor">
+            <div class="videos">         
+                <iframe width="1428" height="574" src="https://www.youtube.com/embed/B-qfh5gSZA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div class="videos">  
+                <iframe width="1428" height="574" src="https://www.youtube.com/embed/m7-oyEub52k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
         </main>
     <footer>
         <div class="contenedor">
             <p class="copy">Yoga de Laura &copy; 2020</p>
             <div class="redes">
                 <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
-                <a class="icon-youtube" href="trabajoenesto.html"></a>
+                <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
                 <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
                 <a class="icon-mail" href="trabajoenesto.html"></a>>
               
