--- a/Contacto.html
+++ b/Contacto.html
@@ -26,14 +26,14 @@
     </header>
    <main>
        <div class="contenedor">
-           <form id="form">
+           <form id="form" name="form-contacto" method="post" action="enviar_mail.php"><br>
                 <h2>Yoga de Laura</h2>
                     <p>Para poder contactarte conmigo...</p><br><br>
                     Tu nombre:<br>
                     <input type="text" name="nombre" placeholder="EJ. Laura" required><br><br>
                     <p>Tu E-mail para poder responderte:<br>
                     <input type="email" name="email" placeholder="EJ. laura@laura.com" required><br><br>
-                    <textarea name="mensage" rows="10" cols="30" placeholder="Escribi tu mensaje aquí" required></textarea><br><br>
+                    <textarea name="mensaje" rows="10" cols="30" placeholder="Escribi tu mensaje aquí" required></textarea><br><br>
                     
                     <input type="submit" name="enviar" class="button" value="Enviar">
                     <input type="reset" name="reset" class="button" value="Borrar"><br><br>
@@ -46,7 +46,7 @@
         <p class="copy">Yoga de Laura &copy; 2020</p>
         <div class="redes">
                 <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
-                <a class="icon-youtube" href="trabajoenesto.html"></a>
+                <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
                 <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
                 <a class="icon-mail" href="trabajoenesto.html"></a>
           
