--- a/Leermas.html
+++ b/Leermas.html
@@ -42,59 +42,53 @@
                     Evidentemente, el yoga no es una pócima mágica ni la solución a todos nuestros problemas 
                     de salud, pero existe un consenso generalizado acerca de sus efectos positivos sobre el 
                     organismo humano, que contribuyen a que alcancemos una mayor calidad y esperanza de vida. 
-                    A continuación resumimos algunos de los más importantes:<br><br>
-                                    Fortalece músculos y huesos<br><br>
-                    El yoga ayuda a fortalecer los músculos pero evita que se acumule ácido láctico en el 
+                    A continuación resumimos algunos de los más importantes:</p><br>
+                    <h4>Músculos y huesos</h4><br>
+                <p style="text-align: justify;">El yoga ayuda a fortalecer los músculos pero evita que se acumule ácido láctico en el 
                     cuerpo y no reduce la flexibilidad. Tener una musculatura definida protege los huesos, 
                     evita lesiones y previene enfermedades como la artritis.
                     En cuanto a los huesos, está demostrado que el yoga ayuda a reforzarlos y a frenar la 
                     pérdida de masa ósea. Además, es fundamental para prevenir lesiones y fracturas. Con el 
                     yoga también se consigue mejorar la postura corporal, algo que incide directamente en la 
-                    salud de la columna vertebral.<br><br>
-                                    Aumenta la flexibilidad<br><br>
-                    Más allá de avanzar en las posturas, la flexibilidad nos ayuda enormemente a evitar 
+                    salud de la columna vertebral.</p><br>
+                    <h4>Aumenta la flexibilidad</h4><br>
+                <p style="text-align: justify;">Más allá de avanzar en las posturas, la flexibilidad nos ayuda enormemente a evitar 
                     lesiones. Al empezar en el yoga, la falta de flexibilidad es uno de los aspectos que más 
                     dolores de cabeza provoca en el practicante, especialmente entre los hombres. Pero con 
                     constancia y aumentando progresivamente la presencia en las posturas, iremos mejorando 
                     de manera muy notable. A medida que aumenta la flexibilidad, desaparecen muchos de los 
-                    dolores musculares provocados por las tensiones y por las malas posturas.<br><br>
-                                    Alivia el dolor<br><br>
-                    Con una práctica bien adaptada, el yoga es muy efectivo al aliviar la mayoría de los 
+                    dolores musculares provocados por las tensiones y por las malas posturas.</p><br>
+                    <h4>Alivia el dolor</h4><br>
+                <p style="text-align: justify;">Con una práctica bien adaptada, el yoga es muy efectivo al aliviar la mayoría de los 
                     dolores crónicos como el dolor de cuello, la artritis reumatoide, dolor de rodillas, 
-                    lumbalgia, dolor de espalda crónico, ciática o fibromialgia, entre otros.<br><br>
-                                    Nos mantiene jóvenes<br><br>
-                    Hay estudios recientes que sugieren que el yoga y la meditación pueden afectar al ADN, 
+                    lumbalgia, dolor de espalda crónico, ciática o fibromialgia, entre otros.</p><br>
+                    <h4>Nos mantiene jóvenes</h4><br>
+                <p style="text-align: justify;">Hay estudios recientes que sugieren que el yoga y la meditación pueden afectar al ADN, 
                     protegiéndolo del daño y también evitando y revertiendo los cambios negativos que afectan 
                     al proceso de envejecimiento del cuerpo, ya que tiene una incidencia directa sobre la 
                     actividad de la enzima telomerasa, clave para la proteger los telómeros en cada división 
                     celular. Estos beneficios también podrían evitar el deterioro cognitivo relacionado con la 
-                    edad, especialmente cuando se combina con meditación.<br><br>
-                                    Quema calorías<br><br>
-                    Probablemente este sea uno de los beneficios del yoga que más atrae al público general. 
+                    edad, especialmente cuando se combina con meditación.</p><br>
+                    <h4>Quema calorías</h4><br>
+                <p style="text-align: justify;">Probablemente este sea uno de los beneficios del yoga que más atrae al público general. 
                     Pero más allá de la estética, lo que más nos interesa es que en un estilo de vida saludable 
                     es importante mantener un cuerpo libre de sobrepeso. Algunas investigaciones han consensuado 
                     que la práctica del Vinyasa Yoga implica un gasto calórico promedio de 7 kcal/min, lo que 
-                    equivale a quemar unas 507 calorías por hora.<br><br>
-                                    Mejora la respiración<br><br>
-                    Uno de los puntos fundamentales del yoga es que nos enseña a respirar, más que correctamente, 
+                    equivale a quemar unas 507 calorías por hora.</p><br>
+                    <h4>Mejora la respiración</h4><br>
+                <p style="text-align: justify;">Uno de los puntos fundamentales del yoga es que nos enseña a respirar, más que correctamente, 
                     conscientemente. Sin contar con las diversas técnicas que presenta el pranayama, solo la 
                     práctica de asanas ya implica un control permanente de la respiración y, en consecuencia, 
                     una mejora sustancial en la oxigenación de todo el organismo. La respiración conocida como 
                     abdominal o diafragmática, que en la inspiración se inicia en el abdomen para continuar en 
                     la zona intercostal y terminar en la clavícula, y en la espiración sigue el recorrido a la 
                     inversa, incrementa la oxigenación de las células. Además, respirar de manera profunda y a 
-                    un ritmo pausado ralentiza el ritmo cardiaco y relaja los músculos.<br><br>           
-                                    Refuerza el sistema inmunológico y equilibra el sistema nervioso<br><br>
-                    El yoga ayuda a reducir el nivel de cortisol, la hormona relacionada con el estrés, que 
+                    un ritmo pausado ralentiza el ritmo cardiaco y relaja los músculos.</p><br>           
+                    <h4>Refuerza el sistema inmunológico y equilibra el sistema nervioso</h4><br>
+                <p style="text-align: justify;">El yoga ayuda a reducir el nivel de cortisol, la hormona relacionada con el estrés, que 
                     como sabemos está íntimamente ligado a problemas de salud de todo tipo. Al incidir 
                     directamente en esta hormona, la práctica del yoga aumenta nuestra resistencia a enfermedades 
-                    e infecciones.
-                    Uno de los secretos del yoga documentado en numerosos estudios es que, al combinar posturas 
-                    dinámicas con la relajación, resulta mucho más eficaz como herramienta para combatir el 
-                    estrés que cualquier ejercicio de relajación que no vaya acompañado de ninguna otra práctica 
-                    dinámica. De esta forma, además, se consigue mantener un equilibrio en el sistema nervioso.<br><br>
-                                    Promueve la salud cardiovascular<br><br>
-                    Diversos estudios sostienen que el yoga combate la hipertensión y reduce los niveles de 
+                    e infecc<br>xt-align: justify;">Diversos estudios sostienen que el yoga combate la hipertensión y reduce los niveles de 
                     colesterol en sangre, lo que a la larga disminuye el riesgo de padecer enfermedades 
                     cardiovasculares. También desciende la acumulación de grasa en las arterias y reduce la 
                     concentración sanguínea de interleucina-6, una molécula ligada a la respuesta inflamatoria 
