--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </section> 
             <section id="bienvenidos">
                 <div class="contenedor">
-                    <p>En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
+                    <p style="text-align: justify;">En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
                 </div>
             </section>
             <section id="blog">
