--- a/Contacto.html
+++ b/Contacto.html
@@ -26,7 +26,7 @@
     </header>
    <main>
        <div class="contenedor">
-           <form id="form" name="form-contacto" method="post" action="enviar_mail.php"><br>
+           <form id="form" name="form_contacto" method="post" action="enviarxmail.php"><br>
                 <h2>Yoga de Laura</h2>
                     <p>Para poder contactarte conmigo...</p><br><br>
                     Tu nombre:<br>
