--- a/Contacto.html
+++ b/Contacto.html
@@ -27,8 +27,9 @@
    <main>
        <div class="contenedor">
            <form id="form" name="form_contacto" method="post" action="enviarxmail.php"><br>
-                <h2>Yoga de Laura</h2>
-                    <p>Para poder contactarte conmigo...</p><br><br>
+                <h2>Tu mensaje es muy importante para mi!</h2>
+                    <p>Para poder contactarte conmigo podes enviarme un email desde este formulario o por las redes sociales en los iconos al pie de cualquier pagina.</p><br>
+                    <h2>Namaste!</h2><br>
                     Tu nombre:<br>
                     <input type="text" name="nombre" placeholder="EJ. Laura" required><br><br>
                     <p>Tu E-mail para poder responderte:<br>
@@ -45,12 +46,12 @@
     <div class="contenedor">
         <p class="copy">Yoga de Laura &copy; 2020</p>
         <div class="redes">
-                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
-                <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
-                <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
-                <a class="icon-mail" href="trabajoenesto.html"></a>
-          
+            <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
+            <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
+            <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
+            <a class="icon-mail" href="Contacto.html"></a>
         </div>
+        <p class="copy">Seguime en las redes sociales!</p>
     </div>
 </footer>
 </body>
