--- a/Leermas.html
+++ b/Leermas.html
@@ -88,7 +88,7 @@
                 <p style="text-align: justify;">El yoga ayuda a reducir el nivel de cortisol, la hormona relacionada con el estrés, que 
                     como sabemos está íntimamente ligado a problemas de salud de todo tipo. Al incidir 
                     directamente en esta hormona, la práctica del yoga aumenta nuestra resistencia a enfermedades 
-                    e infecc<br>xt-align: justify;">Diversos estudios sostienen que el yoga combate la hipertensión y reduce los niveles de 
+                    e infecciones.<br>Diversos estudios sostienen que el yoga combate la hipertensión y reduce los niveles de 
                     colesterol en sangre, lo que a la larga disminuye el riesgo de padecer enfermedades 
                     cardiovasculares. También desciende la acumulación de grasa en las arterias y reduce la 
                     concentración sanguínea de interleucina-6, una molécula ligada a la respuesta inflamatoria 
@@ -104,9 +104,9 @@
                 <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
                 <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
                 <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
-                <a class="icon-mail" href="trabajoenesto.html"></a>
-              
+                <a class="icon-mail" href="Contacto.html"></a>
             </div>
+            <p class="copy">Seguime en las redes sociales!</p>
         </div>
     </footer>
 </body>
