--- a/Videos.html
+++ b/Videos.html
@@ -33,18 +33,18 @@
             </div>
         </div>
         </main>
-    <footer>
-        <div class="contenedor">
-            <p class="copy">Yoga de Laura &copy; 2020</p>
-            <div class="redes">
-                <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
-                <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
-                <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
-                <a class="icon-mail" href="trabajoenesto.html"></a>>
-              
+        <footer>
+            <div class="contenedor">
+                <p class="copy">Yoga de Laura &copy; 2020</p>
+                <div class="redes">
+                    <a class="icon-instagram" href="https://www.instagram.com/laura_petracca" target="_blank"></a>
+                    <a class="icon-youtube" href="https://www.youtube.com/channel/UCXwEngR5nS2iZt2kvur3K3Q" target="_blank"></a>
+                    <a class="icon-whatsapp" href="https://wa.me/5493415964270" target="_blank"></a>
+                    <a class="icon-mail" href="Contacto.html"></a>
+                </div>
+                <p class="copy">Seguime en las redes sociales!</p>
             </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
