--- a/clasesdeyoga.html
+++ b/clasesdeyoga.html
@@ -23,39 +23,25 @@
                 </nav>
             </div>
         </header>
-        <main>
-            <section id="banner">
-                <img src="banner.jpg">
-                <div class="contenedor">
-                    <h2>¡Bienvenidos!</h2>
-                        <p>A la web de la profe Laura</p>
-                    <a href="Leermas.html">Leer más</a>
-                </div>
-            </section> 
-            <section id="bienvenidos">
-                <div class="contenedor">
-                    <p style="text-align: justify;">En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
-                </div>
-            </section>
-            <section id="blog">
-                <h3>Ultimas novedades</h3>
+     <main><br><br><br>
+        <section id="blog">
+            <h3>Aca podes ver en los lugares donde doy las clases!</h3><br>
+            <h3>Solo queda contactarte con migo para conocer los horarios disponibles</h3><br>
                 <div class="contenedor">
                     <article>
-                        <a href="clasesdeyoga.html"><img src="clase.jpg"></a>
-                        <h4>Donde doy clases grupales</h4>
+                        <h4>Espacio Alma Zen</h4>
+                        <h4>Mendoza 5111</h4>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53575.90527297144!2d-60.719434353333845!3d-32.937962538432636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7acb1cae4f245%3A0x88d56ca556b2e9ec!2sAlmaZen!5e0!3m2!1ses!2sar!4v1584982409449!5m2!1ses!2sar" width="300" height="225" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </article>
                     <article>
-                        <a href="clasesparticulares.html"><img src="clase2.jpg"></a>
-                        <h4>Clases particulares en tu casa</h4>
-                    </article>
-                    <article>
-                        <a href="eventos.html"><img src="claseaire.jpg"></a>
-                        <h4>Yoga al aire libre y eventos especiales</h4>
+                        <h4>Club Servando Bayo</h4>
+                        <h4>San Luis 4471</h4>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.4909959865186!2d-60.68660353478276!3d-32.9380439787829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7acae6a5b80ed%3A0xc5ff097b50ac74fe!2sClub%20Sportivo%20Servando%20Bayo!5e0!3m2!1ses!2sar!4v1584981975409!5m2!1ses!2sar" width="300" height="225" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </article>
                 </div>
             </section>
-        </main>
-    <footer>
+     </main>
+     <footer>
         <div class="contenedor">
             <p class="copy">Yoga de Laura &copy; 2020</p>
             <div class="redes">
