--- a/eventos.html
+++ b/eventos.html
@@ -23,39 +23,19 @@
                 </nav>
             </div>
         </header>
-        <main>
-            <section id="banner">
-                <img src="banner.jpg">
+     <main><br><br><br>
+        <section id="blog">
+            <h3>Eventos</h3>
                 <div class="contenedor">
-                    <h2>¡Bienvenidos!</h2>
-                        <p>A la web de la profe Laura</p>
-                    <a href="Leermas.html">Leer más</a>
-                </div>
-            </section> 
-            <section id="bienvenidos">
-                <div class="contenedor">
-                    <p style="text-align: justify;">En este sitio encontraras un lugar para practicar yoga y aprender sobre los beneficios de su practica.<br> Tambien podes ver los productos relacionados a la practica para que puedas adquirirlos y practicar en tu casa.</p>
+                    <article>
+                        <img src="Baúl/blog3.jpg">
+                        <h4>Aca los datos</h4>
+                    </article>
+            
                 </div>
             </section>
-            <section id="blog">
-                <h3>Ultimas novedades</h3>
-                <div class="contenedor">
-                    <article>
-                        <a href="clasesdeyoga.html"><img src="clase.jpg"></a>
-                        <h4>Donde doy clases grupales</h4>
-                    </article>
-                    <article>
-                        <a href="clasesparticulares.html"><img src="clase2.jpg"></a>
-                        <h4>Clases particulares en tu casa</h4>
-                    </article>
-                    <article>
-                        <a href="eventos.html"><img src="claseaire.jpg"></a>
-                        <h4>Yoga al aire libre y eventos especiales</h4>
-                    </article>
-                </div>
-            </section>
-        </main>
-    <footer>
+     </main>
+     <footer>
         <div class="contenedor">
             <p class="copy">Yoga de Laura &copy; 2020</p>
             <div class="redes">
